- fixed spec
