# explorer/internal/models/city_body_schema.go
@@ -1,0 +1,142 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// CityBodySchema city body schema
+//
+// swagger:model CityBodySchema
+type CityBodySchema struct {
+
+	// country
+	Country CountryName `json:"country,omitempty"`
+
+	// name
+	Name CityName `json:"name,omitempty"`
+}
+
+// Validate validates this city body schema
+func (m *CityBodySchema) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateCountry(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *CityBodySchema) validateCountry(formats strfmt.Registry) error {
+	if swag.IsZero(m.Country) { // not required
+		return nil
+	}
+
+	if err := m.Country.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("country")
+		} else if ce, ok := err.(*errors.CompositeError); ok {
+			return ce.ValidateName("country")
+		}
+		return err
+	}
+
+	return nil
+}
+
+func (m *CityBodySchema) validateName(formats strfmt.Registry) error {
+	if swag.IsZero(m.Name) { // not required
+		return nil
+	}
+
+	if err := m.Name.Validate(formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("name")
+		} else if ce, ok := err.(*errors.CompositeError); ok {
+			return ce.ValidateName("name")
+		}
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validate this city body schema based on the context it is used
+func (m *CityBodySchema) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateCountry(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidateName(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *CityBodySchema) contextValidateCountry(ctx context.Context, formats strfmt.Registry) error {
+
+	if err := m.Country.ContextValidate(ctx, formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("country")
+		} else if ce, ok := err.(*errors.CompositeError); ok {
+			return ce.ValidateName("country")
+		}
+		return err
+	}
+
+	return nil
+}
+
+func (m *CityBodySchema) contextValidateName(ctx context.Context, formats strfmt.Registry) error {
+
+	if err := m.Name.ContextValidate(ctx, formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("name")
+		} else if ce, ok := err.(*errors.CompositeError); ok {
+			return ce.ValidateName("name")
+		}
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CityBodySchema) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CityBodySchema) UnmarshalBinary(b []byte) error {
+	var res CityBodySchema
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
