# explorer/internal/models/country_name.go
@@ -1,0 +1,42 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// CountryName country name
+//
+// swagger:model CountryName
+type CountryName string
+
+// Validate validates this country name
+func (m CountryName) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := validate.MaxLength("", "body", string(m), 25); err != nil {
+		return err
+	}
+
+	if err := validate.Pattern("", "body", string(m), `^[\w\-\' ]+`); err != nil {
+		return err
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validates this country name based on context it is used
+func (m CountryName) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
