# explorer/internal/server/operations/delete_cities_urlbuilder.go
@@ -13,7 +13,8 @@ import (
 
 // DeleteCitiesURL generates an URL for the delete cities operation
 type DeleteCitiesURL struct {
-	Name string
+	CityName    string
+	CountryName string
 
 	_basePath string
 	// avoid unkeyed usage
@@ -49,9 +50,14 @@ func (o *DeleteCitiesURL) Build() (*url.URL, error) {
 
 	qs := make(url.Values)
 
-	nameQ := o.Name
-	if nameQ != "" {
-		qs.Set("name", nameQ)
+	cityNameQ := o.CityName
+	if cityNameQ != "" {
+		qs.Set("city_name", cityNameQ)
+	}
+
+	countryNameQ := o.CountryName
+	if countryNameQ != "" {
+		qs.Set("country_name", countryNameQ)
 	}
 
 	_result.RawQuery = qs.Encode()
